--- a/branches/non-emory-chair/src/app/views/scripts/edit/faculty.phtml
+++ b/branches/non-emory-chair/src/app/views/scripts/edit/faculty.phtml
@@ -54,6 +54,18 @@ function addNonemory() {
     "\t<td><a href='#' onClick=\"Element.remove('nonemory_" + nonemory_count + "')\">remove</a>\n" + 
     "</tr>");
 }
+
+function addNonemoryChair() {
+  nonemorychair_count++;	// unique id for remove link
+  new Insertion.Bottom('nonemorychair_list', "<tr id='nonemorychair_" + nonemorychair_count + "'>\n" +
+    "\t<td><input type='text' name='nonemorychair_firstname[]'></td>\n" +
+    "\t<td><input type='text' name='nonemorychair_lastname[]' ></td>\n" +
+    "\t<td><input type='text' name='nonemorychair_affiliation[]' ></td>\n" +
+    "\t<td><input type='text' name='nonemorychair_email[]' ></td>\n" +
+    "\t<td><a href='#' onClick=\"Element.remove('nonemorychair_" + nonemorychair_count + "')\">remove</a>\n" +
+    "</tr>");
+}
+
 </script>
 
 
@@ -129,6 +141,41 @@ non-Emory committee members.</p>
 		search for former Emory faculty</p>		    
     </div>
     <hr/>
+    <? if (! $has_nonemorychair): ?>
+  <p>Do you have a Non-Emory Committee Chair /Thesis Adviser? (Please search former Emory faculty before answering Yes)
+     <a class="button" onClick="Element.show('nonemorychair')">yes</a>
+     </p>
+<? endif ?>
+
+ <div id="nonemorychair" <? if (! $has_nonemory): ?> style="display:none" <? endif ?> >
+ <h2>Non-Emory Committee Chair /Thesis Adviser</h2>
+<table>
+<tbody id="nonemorychair_list">
+     <? $nec_count = 0; ?>
+     <tr><th>Last name</th> <th>First name</th> <th>Affiliation</th> <th>Email</th></tr>
+     <? foreach ($this->etd->mods->nonemory_chair as $nec) : ?>
+       <tr id="nonemorychair_<?= ++$nec_count; ?>">
+     <td><?= $this->formText("nonemorychair_lastname[]", $nec->last); ?></td>
+     <td><?= $this->formText("nonemorychair_firstname[]", $nec->first); ?></td>
+     <td><?= $this->formText("nonemorychair_affiliation[]", $nec->affiliation); ?></td>
+     <td><?= $this->formText("nonemorychair_email[]", $nec->email); ?></td>
+     <td><a href="#" onClick="Element.remove('nonemorychair_<?= $nec_count ?>')">remove</a>
+       </tr>
+     <? endforeach ?>
+   <tr id="nonemorychair_<?= ++$nec_count; ?>">
+     <td><?= $this->formText("nonemorychair_lastname[]"); ?></td>
+     <td><?= $this->formText("nonemorychair_firstname[]"); ?></td>
+     <td><?= $this->formText("nonemorychair_affiliation[]"); ?></td>
+     <td><?= $this->formText("nonemorychair_email[]"); ?></td>
+     <td><a href="#" onClick="Element.remove('nonemorychair_<?= $nec_count ?>')">remove</a>
+   </tr>
+ <tbody>
+</table>
+<? /* pass the count to the javascript so inserted nodes can have unique ids for removal */ ?>
+<script type="text/javascript">var nonemory_count = <?= $nec_count ?>; </script>
+<a href="#" onClick="javascript:addNonemoryChair()">add another</a>
+</div>
+<hr />
    <h2>Committee Members</h2>
    <ul id="faculty_list">
      <? foreach ($committeeMembers as $committee): ?>
