--- a/src/app/views/scripts/view/summary.phtml
+++ b/src/app/views/scripts/view/summary.phtml
@@ -79,6 +79,22 @@
       <a href="<?= $url ?>"><?= $label ?></a><? else: ?><?= $label ?><? endif ?><? if ($field != $fields[count($fields) - 1]): ?>; <? endif ?>
    <? endforeach ?><br/>
    
+  <? if ($this->etd->school_config->acl_id == "rollins"): ?>
+    <b>Partnering Agencies:</b>
+    <? $fields = $this->etd->partneringagencies(); ?>
+     <? foreach ($fields as $field): ?>
+      <? if ($field instanceof mods_note): ?>
+        <? $label = $field->topic; ?>
+        <? $url = $this->url(array('controller' => 'browse', 'action' => 'partneringagencies', 'coll' => $field->id), '', true); ?>
+      <? else: ?>
+        <? $label = $field; ?>
+        <? $url = $this->url(array('controller' => 'browse', 'action' => 'partneringagencies', 'name' => $field), '', true); ?>
+      <? endif ?>
+      <? if ($published): ?>
+        <a href="<?= $url ?>"><?= $label ?></a><? else: ?><?= $label ?><? endif ?><? if ($field != $fields[count($fields) - 1]): ?>; <? endif ?>
+     <? endforeach ?><br/>
+   <? endif  ?>
+      
   <b>Keywords:</b>
     <? $keywords = $this->etd->keywords(); ?>
     <? foreach ($keywords as $keyword): ?>
@@ -108,19 +124,6 @@
   | <a href="<?= $this->url(array("controller" => "view", "action" => "dc", "pid" => $this->etd->pid())) ?>">DC</a>
   | <a href="<?= $this->url(array("controller" => "view", "action" => "rels", "pid" => $this->etd->pid())) ?>">RELS-EXT</a>
   </span>
-<? endif ?>
-  
-<? if (!$published && $this->etd->schoolId() == "rollins"): ?>
-  <b>Partnering Agencies:</b> 
-   <? $fields = $this->etd->partneringagencies(); ?>
-   <? foreach ($fields as $field): ?>      
-      <? $label = $field; ?>
-      <? $url = $this->url(array('controller' => 'browse', 'action' => 'researchfields', 'name' => $field), '', true); ?>     
-      <? if ($published): ?><a href="<?= $url ?>"><?= $label ?></a>
-      <? else: ?><?= $label ?><? endif ?>
-      <? if ($field != $fields[count($fields) - 1]): ?>; <? endif ?>
-   <? endforeach ?><br/>  
-  
   <br/>
 <? endif ?>
 
