#786, #787 - Added validation to embargo duration admin page, fixed unit tests broken by changesEmailAction - Also a a few small text tweaks and changed the contactInfo validation message to use warning class

--- a/src/app/views/scripts/author-info/edit.phtml
+++ b/src/app/views/scripts/author-info/edit.phtml
@@ -1,14 +1,15 @@
 <?= $this->javascript("contact.js"); ?>
 
 <? //Div used to display validation errors ?>
-<div class = "invalid">
-    <? if(isset($this->errors)): ?>
+<? if(isset($this->errors)): ?>
+    <p class="warning">
+    
         <? foreach ($this->errors as $error):  ?>
-        <?= $error ?>
-        <br/>
+            <?= $error ?>
+            <br/>
         <? endforeach  ?>
-    <? endif ?>
-</div>
+    </p>
+<? endif ?>
 <br/>
 
 <h1>Edit Contact Information</h1>
