--- a/src/app/views/scripts/manage/approve.phtml
+++ b/src/app/views/scripts/manage/approve.phtml
@@ -1,3 +1,11 @@
+<? //section used to display validation errors ?>
+<? if(isset($this->error)): ?>
+    <p class="warning">
+    
+        <?= $this->error ?>
+    </p>
+<? endif ?>
+
 <h1>Approve Record</h1>
 
 <p>
