--- a/trunk/src/app/views/scripts/edit/faculty.phtml
+++ b/trunk/src/app/views/scripts/edit/faculty.phtml
@@ -150,7 +150,7 @@ non-Emory committee members.</p>
 ?>
 
     <? if (! $has_nonemory_chair): ?>
-  <p>Do you have a Non-Emory Committee Chair /Thesis Adviser? (Please search former Emory faculty before answering Yes)
+  <p>Is your Committee Chair / Thesis Advisor unaffiliated with Emory (does not include former Emory staff)?
      <a class="button" onClick="Element.show('nonemory_chair')">yes</a>
      </p>
 <? endif ?>
