--- a/trunk/src/app/views/scripts/index/index.phtml
+++ b/trunk/src/app/views/scripts/index/index.phtml
@@ -50,7 +50,10 @@ href="http://proquest.umi.com.proxy.library.emory.edu/pqdweb?RQT=305&amp;SQ=LSCH
 </div>
 <hr/>
 
-<?=  $this->render("index/calendar.phtml"); ?>
+<? if ($this->calendar): ?>
+ <?=  $this->render("index/calendar.phtml"); ?>
+<? endif ?>
+
 <? if ($this->news): ?>
  <?=  $this->render("index/news.phtml"); ?>
 <? endif ?>
