--- a/src/app/views/scripts/index/calendar.phtml
+++ b/src/app/views/scripts/index/calendar.phtml
@@ -1,26 +1,23 @@
 <div id="calendar">
 <h2>Calendar</h2>
 
-<p>
-    <b>Information Workshops:</b><br/>
-    <ul>
-        <li>Thursday, Feb 17, Rollins School of Public Health (Room TBA), Noon</li>
-        <li>Thursday, Feb 24, Woodruff Library Room 310, 3pm</li>
-        <li>Wednesday, March 2, Rollins School of Public Health (Room TBA), Noon</li>
-        <li>Monday, March 14, Woodruff Library Room 310, 3pm</li>
-    </ul>
-
-</p>
-
-<p>
-    <b>Submission Workshops:</b>
-    <ul>
-        <li>Wednesday, April 6, Woodruff Library Room 310, 3pm</li>
-        <li>Thursday, April 7, Rollins School of Public Health (Room TBA), Noon</li>
-        <li>Tuesday, April 12, Rollins School of Public Health (Room TBA), Noon</li>
-        <li>Thursday, April 14, Woodruff Library Room 310, 3pm</li>
-    </ul>
-</p>
+<? foreach ($this->calendar as $title => $details): ?>
+  <p>
+    <u><b><?= $title ?>:</b></u>
+    <? if (isset($details["description"])): ?>
+        <br /><?= $details["description"] ?>
+    <? endif ?>
+    <? if (isset($details["start"]) && $details["start"]!=''): ?>
+        <?= $details["start"] ?>
+    <? endif ?>
+    <? if (isset($details["end"]) && $details["end"]!=''): ?>
+        - <?= $details["end"] ?> 
+    <? endif ?>
+    <? if (isset($details["where"]) && $details["where"] != ''): ?>
+        <?= $details["where"] ?>
+    <? endif ?>
+  </p>
+<? endforeach ?>
 
 </div> 
 
