#399 Fixed a few small bugs related to displaying date and revised the unit tests

--- a/src/app/views/scripts/index/calendar.phtml
+++ b/src/app/views/scripts/index/calendar.phtml
@@ -17,7 +17,7 @@
             - <?= $ww["end"] ?>
         <? endif ?>
         <? if (isset($ww["where"]) && $ww["where"] != ''): ?>
-            <?= $ww["where"] ?>
+            <br /><?= $ww["where"] ?>
         <? endif ?>
         </li>
     <? endforeach ?>
