#868 - fist part of changes from suggestions from code review

--- a/branches/CR_committee/src/app/views/scripts/view/summary.phtml
+++ b/branches/CR_committee/src/app/views/scripts/view/summary.phtml
@@ -1,4 +1,5 @@
-<? /* summary ETD information - displayed in both full and short record views */ ?>
+<? /* summary ETD information - displayed in both full and short record views 
+    Only should use functions available in etdInterface */ ?>
 <? $published = ($this->etd->status() == "published"); ?>
 
 <? if ($published): ?>
