--- a/trunk/src/app/views/scripts/author-info/_view.phtml
+++ b/trunk/src/app/views/scripts/author-info/_view.phtml
@@ -1,5 +1,5 @@
 <? /* common view layout for contact information view and full record review */ ?>
-<? $authorInfo = $this->authorInfo->mads; ?>
+<? $authorInfo = $this->user->mads; ?>
 <div class="contact_info">
  <? if (isset($authorInfo->current)): ?>
  <h2>current</h2>
@@ -24,5 +24,6 @@
    <p><b>email:</b> <?= $authorInfo->permanent->email ?></p> <? /* required field, so not checking if set */ ?>
   </div>
 <? endif ?>
-<p><b>netid:</b> <?= $authorInfo->netid ?></p>
+<p><b>netid:</b> <?= $this->user->mads->netid ?></p>
 </div>
+<hr>
