--- a/branches/CR_committee/src/app/views/scripts/edit/faculty.phtml
+++ b/branches/CR_committee/src/app/views/scripts/edit/faculty.phtml
@@ -155,6 +155,8 @@ non-Emory committee members.</p>
      </p>
 <? endif ?>
 
+ <? // FIXME: In the future rearrange form to be divided by emory and non-emory, 
+     //use a chek-box to designate committee or chair ?  ?>
  <div id="nonemory_chair" <? if (! $has_nonemory_chair): ?> style="display:none" <? endif ?> >
  <h2>Non-Emory Committee Chair /Thesis Adviser</h2>
 <table>
@@ -163,12 +165,12 @@ non-Emory committee members.</p>
      <!-- Build list of currently assigned non-emory chairs -->
      <tr><th>Last name</th> <th>First name</th> <th>Affiliation</th> </tr>
      <? foreach ($this->etd->mods->nonemory_chair as $nec) : ?>
-       <tr id="nonemory_chair_<?= ++$nec_count; ?>">
-     <td><?= $this->formText("nonemory_chair_lastname[]", $nec->last); ?></td>
-     <td><?= $this->formText("nonemory_chair_firstname[]", $nec->first); ?></td>
-     <td><?= $this->formText("nonemory_chair_affiliation[]", $nec->affiliation); ?></td>
-     <td><a href="#" onClick="Element.remove('nonemory_chair_<?= $nec_count ?>')">remove</a>
-       </tr>
+         <tr id="nonemory_chair_<?= ++$nec_count; ?>">
+             <td><?= $this->formText("nonemory_chair_lastname[]", $nec->last); ?></td>
+             <td><?= $this->formText("nonemory_chair_firstname[]", $nec->first); ?></td>
+             <td><?= $this->formText("nonemory_chair_affiliation[]", $nec->affiliation); ?></td>
+             <td><a href="#" onClick="Element.remove('nonemory_chair_<?= $nec_count ?>')">remove</a>
+         </tr>
      <? endforeach ?>
 
    <!-- add empty row for new entry -->
