--- a/src/app/views/scripts/index/calendar.phtml
+++ b/src/app/views/scripts/index/calendar.phtml
@@ -1,28 +1,26 @@
 <div id="calendar">
 <h2>Calendar</h2>
 
-<? foreach ($this->calendar as $title => $details): ?>
-  <p>
-    <u><b><?= $title ?></b></u>
-    <? if (isset($details["description"])): ?>
-        <br /><?= $details["description"] ?>
-    <? endif ?>
+<p>
+    <b>Information Workshops:</b><br/>
+    <ul>
+        <li>Thursday, Feb 17, Rollins School of Public Health (Room TBA), Noon</li>
+        <li>Thursday, Feb 24, Woodruff Library Room 310, 3pm</li>
+        <li>Wednesday, March 2, Rollins School of Public Health (Room TBA), Noon</li>
+        <li>Monday, March 14, Woodruff Library Room 310, 3pm</li>
+    </ul>
 
-    <?// Get the start, end and location for each entry,  can have mutiple per title?>
-    <? foreach ($details["whenWhere"] as $ww): ?>
-        <? if (isset($ww["start"]) && $ww["start"]!=''): ?>
-            <li><?= $ww["start"] ?>
-        <? endif ?>
-        <? if (isset($ww["end"]) && $ww["end"]!=''): ?>
-            - <?= $ww["end"] ?>
-        <? endif ?>
-        <? if (isset($ww["where"]) && $ww["where"] != ''): ?>
-            <br /><?= $ww["where"] ?>
-        <? endif ?>
-        </li>
-    <? endforeach ?>
-  </p>
-<? endforeach ?>
+</p>
+
+<p>
+    <b>Submission Workshops:</b>
+    <ul>
+        <li>Wednesday, April 6, Woodruff Library Room 310, 3pm</li>
+        <li>Thursday, April 7, Rollins School of Public Health (Room TBA), Noon</li>
+        <li>Tuesday, April 12, Rollins School of Public Health (Room TBA), Noon</li>
+        <li>Thursday, April 14, Woodruff Library Room 310, 3pm</li>
+    </ul>
+</p>
 
 </div> 
 
