--- a/src/app/views/scripts/report/index.phtml
+++ b/src/app/views/scripts/report/index.phtml
@@ -8,13 +8,13 @@
     "action" => "grad-data"), '', true); ?>">Graduate School Academic Year Report</a>
   <?= $this->FiletypeIcon("text/csv") ?></li>
   <li><a href="<?= $this->url(array("controller" => "report",
-      'action' => 'exportemails')) ?>">Graduate School Export email addresses for approved records</a>
-    <?= $this->FiletypeIcon("text/csv") ?></li>
-  <li><a href="<?= $this->url(array("controller" => "report",
     "action" => "embargo-csv"), '', true); ?>">Upcoming Embargos</a>
   <?= $this->FiletypeIcon("text/csv") ?></li>
   <li><a href="<?= $this->url(array('action' => 'embargo')) ?>">Requested Embargo Duration</a>
   <?= $this->FiletypeIcon("application/x-shockwave-flash") ?></li>
   <li><a href="<?= $this->url(array('action' => 'page-length')) ?>">Document Length</a>
   <?= $this->FiletypeIcon("application/x-shockwave-flash") ?></li>
+  <li><a href="<?= $this->url(array("controller" => "report",
+      'action' => 'exportemails')) ?>">Export email addresses for approved records</a>
+    <?= $this->FiletypeIcon("text/csv") ?></li>
 </ul>
