#881 - disable submit buttons after click so info is not submitted more than once.

--- a/branches/release_1.10.x/src/app/views/scripts/author-info/edit.phtml
+++ b/branches/release_1.10.x/src/app/views/scripts/author-info/edit.phtml
@@ -204,7 +204,7 @@ netid
 <br/>
 <?= $this->authorInfo->mads->netid; ?>
 <br/>
-<?= $this->formSubmit("Save", "Save", array("class" => "button")); ?>
+<?= $this->formSubmit("Save", "Save", array("class" => "button", "onClick" => "this.disabled=true;")); ?>
 <br/>
 </form>
 
