--- a/branches/release_1.10.x/src/app/views/scripts/manage/reactivate.phtml
+++ b/branches/release_1.10.x/src/app/views/scripts/manage/reactivate.phtml
@@ -15,5 +15,5 @@ Reactivate record with status:
 <p><?= $this->formLabel("reason", "Reason for reactivation: "); ?>   
 <?= $this->formText("reason", "", array("size" => 50)); ?></p>
 
-  <?= $this->formSubmit("reactivate", "Reactivate"); ?>
+  <?= $this->formSubmit("reactivate", "Reactivate", array("onClick" => "this.disabled=true;")); ?>
 </form>
