--- a/branches/release_1.10.x/src/app/views/scripts/manage/reviseembargo.phtml
+++ b/branches/release_1.10.x/src/app/views/scripts/manage/reviseembargo.phtml
@@ -15,5 +15,5 @@
 <?= $this->formText("newdate", "", array("size" => 20)); ?>
 </b>
 </p>
-  <?= $this->formSubmit("reviseembargo", "Revise"); ?>
+  <?= $this->formSubmit("reviseembargo", "Revise", array("onClick" => "this.disabled=true;")); ?>
 </form>
