--- a/branches/release_1.10.x/src/app/views/scripts/program/index.phtml
+++ b/branches/release_1.10.x/src/app/views/scripts/program/index.phtml
@@ -73,7 +73,7 @@ function hdlOff(id) {
 
 </script>
 
-<?= $this->formSubmit("submit", "save") ?>
+<?= $this->formSubmit("submit", "save", array("onClick" => "this.disabled=true;")) ?>
 </form>
 <? endif ?>
 
