--- a/branches/release_1.10.x/src/app/views/scripts/manage/approve.phtml
+++ b/branches/release_1.10.x/src/app/views/scripts/manage/approve.phtml
@@ -26,5 +26,5 @@
 		     "6 years" => "6 years"); ?>
   <?= $this->formSelect("embargo", "", "", $durations); ?></p>
 
-  <?= $this->formSubmit("approve", "approve >", array("class" => "button")); ?>
+  <?= $this->formSubmit("approve", "approve >", array("class" => "button", "onClick" => "this.disabled=true;")); ?>
 </form>
