--- a/branches/release_1.10.x/src/app/views/scripts/submission/processpdf.phtml
+++ b/branches/release_1.10.x/src/app/views/scripts/submission/processpdf.phtml
@@ -59,7 +59,7 @@ ETD system manually. To proceed with the manual process, upload your file below.
   <?= $this->formHidden("force", "create"); ?>
   <p><b>Your PDF</b> <?= $this->formFile("pdf"); ?>
 <?= $this->formSubmit("Proceed", "Proceed >", array("class" => "button", "style" => "margin-left:10px",
-						"onClick" => "Element.show('processing')")); ?>
+						"onClick" =>  "this.disabled=true; Element.show('processing')")); ?>
 
 <span id="processing" style="display:none">Processing ... <span class="note">(this may take a moment)</span></span>
 </p>
