--- a/branches/release_1.10.x/src/app/views/scripts/submission/start.phtml
+++ b/branches/release_1.10.x/src/app/views/scripts/submission/start.phtml
@@ -178,7 +178,7 @@ later in the process, if necessary.</p>
 <?//= $this->formHidden("MAX_FILE_SIZE", "3000000"); ?> 
   <p><b>Your PDF</b> <?= $this->formFile("pdf"); ?>
 <?= $this->formSubmit("Begin", "Begin >", array("class" => "button", "style" => "margin-left:10px",
-						"onClick" => "Element.show('processing')")); ?>
+						"onClick" => "this.disabled=true; Element.show('processing')")); ?>
 
 <span id="processing" style="display:none">Processing ... <span class="note">(this may take a moment)</span></span>
 </p>
@@ -208,7 +208,7 @@ by using the "edit" links.  Green check marks <?= $ok ?> will appear in the Subm
    <p>Test information extracted from a PDF (development only)</p>
 
 <?//= $this->formHidden("MAX_FILE_SIZE", "3000000"); ?> 
-  <p><?= $this->formFile("pdf"); ?> <?= $this->formSubmit("Debug", "Debug >", array("class" => "submitlink", "style" => "padding-left:10px")); ?></p>
+  <p><?= $this->formFile("pdf"); ?> <?= $this->formSubmit("Debug", "Debug >", array("onClick" => "this.disabled=true;", "class" => "submitlink", "style" => "padding-left:10px")); ?></p>
 
 </form>
 <? endif ?>
