#882 - fixed bug in contact display #881 - missed one place where a submit button needed to be changed.

--- a/branches/release_1.10.x/src/app/views/scripts/edit/rights.phtml
+++ b/branches/release_1.10.x/src/app/views/scripts/edit/rights.phtml
@@ -115,7 +115,7 @@ paper ETD Submission Agreement Form which you will present to
 
 <hr/>
 
-<?= $this->formSubmit("Save", "Save >", array("class" => "button")); ?>
+<?= $this->formSubmit("Save", "Save >", array("class" => "button", "onClick" => "this.disabled=true;")); ?>
 
 </form>
 
