#881 - Found more places that needed changing and converted <input> to $this->formSubmit

--- a/branches/release_1.10.x/src/app/views/scripts/edit/faculty.phtml
+++ b/branches/release_1.10.x/src/app/views/scripts/edit/faculty.phtml
@@ -269,7 +269,7 @@ non-Emory committee members.</p>
 <a href="#" onClick="javascript:addNonemory()">add another</a>
 </div>
      
-<p><input class="button" type="submit" value="save"/></p>
+<p><?= $this->formSubmit("save", "save", array("class" => "button", "onClick" => "this.disabled=true;")); ?></p>
 </form>
 						       
 </div>
