add date format to date valid field

--- a/branches/release_1.10.x/src/app/views/scripts/author-info/edit.phtml
+++ b/branches/release_1.10.x/src/app/views/scripts/author-info/edit.phtml
@@ -129,7 +129,7 @@ permanent address
 
 
 <p>
-        <span class = "<?= $class; ?>" > date valid</span>
+        <span class = "<?= $class; ?>" > date valid (yyyy-mm-dd)</span>
         <br/>
         <?= $this->formText("perm-date", (isset($this->allParams["perm-date"]) ? $this->allParams["perm-date"] : $this->authorInfo->mads->permanent->date)); ?>
 </p>
