after clicking on non-emory "yes" button will auto-scroll to the bottom of the page to show new form.

--- a/branches/release_1.10.x/src/app/views/scripts/edit/faculty.phtml
+++ b/branches/release_1.10.x/src/app/views/scripts/edit/faculty.phtml
@@ -236,9 +236,9 @@ non-Emory committee members.</p>
 	}
 ?>
 
-<? if (! $has_nonemory): ?>     
+<? if (! $has_nonemory): ?>  <?/*Auto scroll to end of page when yes button clicked*/?>
   <p>Do you have any Non-Emory Committee Members?
-     <a class="button" onClick="Element.show('nonemory')">yes</a> 
+     <a class="button" onClick="Element.show('nonemory'); document.getElementById('save').scrollIntoView(true);">yes</a>
      </p>
 <? endif ?>
      
