--- a/branches/release_1.10.x/src/app/views/scripts/index/calendar.phtml
+++ b/branches/release_1.10.x/src/app/views/scripts/index/calendar.phtml
@@ -1,27 +1,29 @@
 <div id="calendar">
-<h2>Calendar</h2>
+    <h2>Calendar</h2>
 
-<? foreach ($this->calendar as $title => $details): ?>
-  <p>
-    <u><b><?= $title ?></b></u>
-    <? if (isset($details["description"])): ?>
-        <br /><?= $details["description"] ?>
-    <? endif ?>
+    <? foreach ($this->calendar as $title => $details): ?>
+        <div>
+            <u><b><?= $title ?></b></u>
+            <? if (isset($details["description"])): ?>
+                <br /><?= $details["description"] ?>
+            <? endif ?>
 
-    <?// Get the start, end and location for each entry,  can have mutiple per title?>
-    <? foreach ($details["whenWhere"] as $ww): ?>
-        <? if (isset($ww["start"]) && $ww["start"]!=''): ?>
-            <li><?= $ww["start"] ?>
-        <? endif ?>
-        <? if (isset($ww["end"]) && $ww["end"]!=''): ?>
-            - <?= $ww["end"] ?>
-        <? endif ?>
-        <? if (isset($ww["where"]) && $ww["where"] != ''): ?>
-            <br /><?= $ww["where"] ?>
-        <? endif ?>
-        </li>
-    <? endforeach ?>
-  </p>
+            <?// Get the start, end and location for each entry,  can have mutiple per title?>
+            <ul>
+                <? foreach ($details["whenWhere"] as $ww): ?>
+                    <? if (isset($ww["start"]) && $ww["start"]!=''): ?>
+                        <li><?= $ww["start"] ?>
+                    <? endif ?>
+                    <? if (isset($ww["end"]) && $ww["end"]!=''): ?>
+                        - <?= $ww["end"] ?>
+                    <? endif ?>
+                    <? if (isset($ww["where"]) && $ww["where"] != ''): ?>
+                        <br /><?= $ww["where"] ?>
+                    <? endif ?>
+                    </li>
+                <? endforeach ?>
+            </ul>
+        </div>
 <? endforeach ?>
 
 </div> 
