--- a/branches/release_1.10.x/src/app/views/scripts/manage/requestchanges.phtml
+++ b/branches/release_1.10.x/src/app/views/scripts/manage/requestchanges.phtml
@@ -13,6 +13,7 @@
 
 <form method="POST" action="<?= $this->url(array('action' => 'changes-email')) ?>">
    <?= $this->formHidden("pid", $this->etd->pid()) ?>
+   <?= $this->formHidden("type", $this->changetype) ?>
    <p><b><?= $this->formLabel("subject", "Subject:") ?></b>
    <?= $this->formText("subject", "Changes Requested to your ETD $this->changetype",
 		       array("style" => "width:500px")) ?></p>
